# stdio-rpc

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/proto_json/: mod.rs
src/proto_postcard/: mod.rs
