[package]
name = "bidirection-over-stdio"
version = "0.1.0"
edition = "2024"

[lib]
name = "stdio_rpc"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
colored = "3.0.0"
evalexpr = "12.0.2"
heapless = "0.8.0"
lazy_static = "1.5.0"
postcard = { version = "1.1.1", features = ["alloc"] }
serde = "1.0.219"
serde_json = "1.0.140"
tracing = "0.1.41"
